--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "randomstring": "^1.1.5",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10"
   },
